--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Title -->
     <h1>Choose Your Wallpaper </h1>
-    <h4>By- Arpit Kumar</h4>
+    <h4>By- Arpit Kumar(09) & Jasmeet Singh(24)</h4>
     <!-- Loader -->
     <div class="loader" id="loader" hidden>
         <img src="loader.svg" alt="Loading">
